(library
  (name fast_bitvector)
  (public_name fast_bitvector)
  (libraries 
    (select popcount.ml from
            (!ocaml_intrinsics_kernel -> popcount.caml.ml)
            (ocaml_intrinsics_kernel -> popcount.intrinsic.ml)
            ))
  (preprocess (pps ppx_sexp_conv ppx_sexp_value ppx_cold))
  )

(rule
  (enabled_if (< %{version:ocaml_intrinsics_kernel} v0.18))
  (target popcount.intrinsic.ml)
  (action
    (copy popcount.intrinsic.int.ml popcount.intrinsic.ml)))

(rule
  (enabled_if (not (< %{version:ocaml_intrinsics_kernel} v0.18)))
  (target popcount.intrinsic.ml)
  (action
    (copy popcount.intrinsic.t.ml popcount.intrinsic.ml)))
