(library
  (name fast_bitvector)
  (public_name fast_bitvector)
  (libraries 
    (select bitops.ml from
            (!ocaml_intrinsics_kernel -> bitops.caml.ml)
            (ocaml_intrinsics_kernel -> bitops.intrinsic.ml)
            ))
  (preprocess (pps ppx_sexp_conv ppx_sexp_value ppx_cold))
  )

(rule
  (enabled_if %{lib-available:ocaml_intrinsics_kernel})
  (target     bitops.intrinsic.ml)
  (action
    (with-stdout-to bitops.intrinsic.ml
     (run %{dep:select_version.sh} v0.18 %{dep:bitops.intrinsic.int.ml} %{dep:bitops.intrinsic.t.ml} %{version:ocaml_intrinsics_kernel}))))
