(library
 (name test_fast_bitvector)
 (libraries fast_bitvector expect_test_helpers_core)
 (preprocess (pps ppx_jane))
 (inline_tests)
 (modules (:standard \ test_quick))
 )

(library
 (name test_fast_bitvector_qcheck)
 (libraries fast_bitvector expect_test_helpers_core qcheck-core)
 (preprocess (pps ppx_jane))
 (inline_tests)
 (modules test_quick)
 )
